2004-02-16  Marek Safar  <marek.safar@seznam.cz>

	* interface.cs (FindMembers): The operation is performed on all base
	interfaces and not only on the first. It is required for future CLS Compliance patch.

2004-02-12 Ben Maurer  <bmaurer@users.sourceforge.net>

	* statement.cs, codegen.cs:
	This patch deals with patterns such as:

	public class List : IEnumerable {

		public MyEnumerator GetEnumerator () {
			return new MyEnumerator(this);
		}
	
		IEnumerator IEnumerable.GetEnumerator () {
			...
		}
		
		public struct MyEnumerator : IEnumerator {
			...
		}
	}

	Before, there were a few things we did wrong:
	1) we would emit callvirt on a struct, which is illegal
	2) we emited ldarg when we needed to emit ldarga
	3) we would mistakenly call the interface methods on an enumerator
	type that derived from IEnumerator and was in another assembly. For example:

	public class MyEnumerator : IEnumerator

	Would have the interface methods called, even if there were public impls of the
	method. In a struct, this lead to invalid IL code.
	
2004-02-11  Marek Safar  <marek.safar@seznam.cz>

        * const.cs: Const is now derived from FieldBase. Method EmitConstant name
	  renamed to Emit.

        * delegate.cs (Define): Fixed crash when delegate type is undefined.
        
2004-02-11  Miguel de Icaza  <miguel@ximian.com>

	* cs-parser.jay: Fix small regression: we were not testing V2
	compiler features correctly.

	* interface.cs: If the emit context is null, then create one

2004-02-09  Marek Safar  <marek.safar@seznam.cz>

        * decl.cs (GetSignatureForError): New virtual method to get full name
	  for error messages.
        
	* attribute.cs (IAttributeSupport): New interface for attribute setting.
	  Now it is possible to rewrite ApplyAttributes method to be less if/else.

        * interface.cs : All InterfaceXXX classes are now derived from MemberCore.
	  Duplicated members and code in these classes has been removed.
	  Better encapsulation in these classes.
