@@ -749,7 +749,7 @@ namespace Mono.CSharp {
 				if (TypeManager.NamespaceClash (Name, Location))
 					return null;
 				
-				ModuleBuilder builder = CodeGen.ModuleBuilder;
+				ModuleBuilder builder = CodeGen.Module.Builder;
 
 				TypeBuilder = builder.DefineType (
 					Name,
